# SOP

./: README.md
L0/: Makefile  notatka_L0.md  prog1.c  prog1b  prog1b.c  prog2.c  prog3.c  prog4  prog4.c  prog6.c  prog7.c  prog8.c  testy.c
L1/: 0l1.c  Makefile  Zadanie1.c  Zadanie2.c  filereader.c  important_things.c  kostek_3.c  l0.c  l1-1.c  l1-2.c  l1-3.c  notatka_l1.md  pisaniedopliku.c  prog12.c  testy.c
L1/BAZA_stare_zadania/SOP1_2023_L1/src/: Makefile  papaj  sop-dika.c
L1/BAZA_stare_zadania/SOP1_2023_L1R/src/: Makefile  sop-venv.c
L1/BAZA_stare_zadania/ale/ForLab1/: l1.tex
L1/BAZA_stare_zadania/ale/ForLab1/data/: z2g1
L1/BAZA_stare_zadania/ale/ForLab1/data/d1/: z3g1
L1/BAZA_stare_zadania/ale/ForLab1/data/d1/d3/: z1g13  z256g20
L1/BAZA_stare_zadania/ale/ForLab1/data/d1/d3/d4/: z1g2
L1/BAZA_stare_zadania/ale/ForLab1/data/d2/: z6g13
L1/BAZA_stare_zadania/ale/ForLab1/src/: Makefile  sop-planb.c
L1/WYKLAD/: l1-1.c  l1-2.c  l1-3.c  prog12.c  prog14.c
strona/: CMakeLists.txt
strona/01_hello_world/: .gitignore  CMakeLists.txt  Makefile  README.md  fizzbuzz_buffered.c  fizzbuzz_direct.c  hello.c  hello32.asm  hello64.asm
strona/02_filesystem2/: CMakeLists.txt  README.md  api_mixing.c  append.c  byteread.c  create_file.c  descriptor_limit.c  dup_write.c  eof.c  excl.c  fileno.c  fopen.c  ftell.c  lseek.c  open.c  read.c  readdir.c  scanf_error.c  standard_fds.c  stat.c  stream_buffering.c  stream_limit.c  writev.c
strona/03_processes/: CMakeLists.txt  README.md  clone.c  concurrent_read.c  cs.c  env.c  exec.c  fork_write.c  hello.c  orphan.c  vm.c  wait.c  zombie.c
strona/04_signals/: CMakeLists.txt  README.md  basic_blocking.c  basic_handler.c  blocking.c  eintr.c  handler.c  kill.c  long_handler.c  partial_read.c  segv_handler.c  sigatomic.c  sigchld.c  sigsuspend.c  sigwait.c
strona/06_threads/: CMakeLists.txt  README.md  basic_thread.c  cancel.c  cleanup.c  concurrent_write.c  detach.c  join.c  mutex.c  thread_args.c  thread_kill.c  thread_signals.c  thread_sigsuspend.c
strona/07_synchro/: 01_semaphore_base.c  07_semaphore.c  11_sem_open.c  14_cv_base.c  15_cv.c  20_barrier.c  CMakeLists.txt  README.md
strona/aio.old/: CMakeLists.txt  README.md  aio_cancel.c  aio_read.c  aio_suspend.c  listio_notification.c  listio_nowait.c  listio_wait.c  signal_notification.c  thread_notification.c
strona/sched.old/: CMakeLists.txt  README.md  bursts.c
