add_executable(standard_fds standard_fds.c)
add_executable(api_mixing api_mixing.c)
add_executable(fileno fileno.c)
add_executable(open open.c)
add_executable(create_file create_file.c)
add_executable(excl excl.c)
add_executable(descriptor_limit descriptor_limit.c)
add_executable(read read.c)
add_executable(writev writev.c)
add_executable(stat stat.c)
add_executable(lseek lseek.c)
add_executable(dup_write dup_write.c)
add_executable(readdir readdir.c)
add_executable(append append.c)
add_executable(byteread byteread.c)
add_executable(eof eof.c)
add_executable(ftell ftell.c)
add_executable(scanf_error scanf_error.c)
