add_executable(kill kill.c)
add_executable(basic_handler basic_handler.c)
add_executable(handler handler.c)
add_executable(segv_handler segv_handler.c)
add_executable(long_handler long_handler.c)
add_executable(basic_blocking basic_blocking.c)
add_executable(blocking blocking.c)
add_executable(sigatomic sigatomic.c)
add_executable(eintr eintr.c)
add_executable(sigchld sigchld.c)
add_executable(sigsuspend sigsuspend.c)
add_executable(sigwait sigwait.c)
