add_executable(basic_thread basic_thread.c)
add_executable(thread_args thread_args.c)
add_executable(join join.c)
add_executable(detach detach.c)
add_executable(cancel cancel.c)
add_executable(cleanup cleanup.c)
add_executable(concurrent_write concurrent_write.c)
add_executable(mutex mutex.c)
add_executable(threads_signals thread_signals.c)
add_executable(thread_kill thread_kill.c)
add_executable(threads_sigsuspend thread_sigsuspend.c)
